platform/runtime/staging/import_legacy/frozen/exam_platform_v1/repository_root/runtime/traces/exam.exams-curated-exam_final-v1.1b506a0b.attempt.001/user.out.build.stderr
/home/xapet/Desktop/f/platform/runtime/staging/import_legacy/latest/runtime_ready/latest/repaired/runtime/workspaces/exam.exams-curated-exam_final-v1.1b506a0b.attempt.001/submission/fix_a.c:1:2: error: #error forced failing integration submission
    1 | #error forced failing integration submission
      |  ^~~~~
